# example-blog-client

./: .gitmodules  Cargo.toml  README.md
src/: blog_api.rs  main.rs  ui_helpers.rs
