[package]
name = "example_blog_client"
version = "0.4.0-beta2"
edition = "2021"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
eframe = "0.22"
egui_commonmark = { version = "0.7.1", features = ["syntax_highlighting"] }
egui_extras = { version = "0.22", features = ["image","svg"] }
lazy_async_promise = { version = "0.4.0", path = "lazy_async_promise" }
reqwest = { version = "0.11", features = ["serde_json", "json", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio =  { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
